# open-access-learn

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-frontend.yml
backend/: Cargo.toml  main.py
backend/src/: main.rs
content/: index.yaml
db/: schema.sql
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  i18n.js  index.js
frontend/src/components/: AITutor.js  Footer.js  LanguageSelector.js  LoadingSpinner.js  Navbar.js  RetryButton.js
frontend/src/config/: api.js
frontend/src/i18n/: en.json  fr.json  translation.json
frontend/src/locales/en/: translation.json
frontend/src/pages/: Curriculum.js  Dashboard.js  Home.js  Login.js  PastQuestions.js  Settings.js  Signup.js
frontend/src/services/: aiService.js  api.js  curriculumService.js  mockData.js  pastQuestionsService.js
i18n/: en.ftl  fr.ftl
scripts/: setup.sh
