[package]
name = "open-access-learn-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15"
lettre = { version = "0.11", features = ["tokio1", "smtp-transport"] }
lettre_email = "0.11"
rand = "0.8"
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
unic-langid = "0.9"
bcrypt = "0.15"
jsonwebtoken = "9.1"
chrono = { version = "0.4", features = ["serde"] } 